If a cookie & state mismatch, app rejects request

--- a/public/callback.html
+++ b/public/callback.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Home</h1>
-    <h2>index.hmtl FILE OPEN</h2>
+    <h1>Callback Success!</h1>
+    <h2>callback.hmtl FILE OPENED and req successful</h2>
   </body>
 </html>
