--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Home</h1>
-    <h2>index.hmtl FILE OPEN</h2>
+    <h1>404 file</h1>
+    <h2>FILE OPEN</h2>
   </body>
 </html>
